diesel_compile_tests/tests/fail/update_requires_set.stderr
error[E0277]: the trait bound `diesel::query_builder::update_statement::SetNotCalled: QueryFragment<_>` is not satisfied
  --> tests/fail/update_requires_set.rs:14:18
   |
14 |         .execute(&mut conn);
   |          ------- ^^^^^^^^^ the trait `QueryFragment<_>` is not implemented for `diesel::query_builder::update_statement::SetNotCalled`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <&'a T as QueryFragment<DB>>
             <() as QueryFragment<DB>>
             <(T0, T1) as QueryFragment<__DB>>
             <(T0, T1, T2) as QueryFragment<__DB>>
             <(T0, T1, T2, T3) as QueryFragment<__DB>>
             <(T0, T1, T2, T3, T4) as QueryFragment<__DB>>
             <(T0, T1, T2, T3, T4, T5) as QueryFragment<__DB>>
             <(T0, T1, T2, T3, T4, T5, T6) as QueryFragment<__DB>>
           and $N others
   = note: required for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>` to implement `QueryFragment<_>`
   = note: required for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>` to implement `ExecuteDsl<_, _>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
